<resources>
    <string name="corporate_timer_will_head">Challenge Will Start In</string>
    <string name="corporate_timer_will_days">Days</string>
    <string name="corporate_timer_will_hours">Hours</string>
    <string name="corporate_timer_will_minutes">Minutes</string>
    <string name="corporate_timer_will_sub">Challenge will start on </string>
    <string name="corporate_timer_will_gst">(gulf standard time)</string>
    <string name="corporate_timer_ongoing_head">Time Left In Challenge</string>
    <string name="corporate_timer_ongoing_sub">Challenge will end on </string>
    <string name="corporate_timer_done_head">Challenge Is Done</string>
    <string name="corporate_timer_done_other"><u>Other challenges by steppi</u></string>
    <string name="corporate_timer_done_sub">Challenge was done on </string>
    <string name="app_name" translatable="false">Steppi</string>
    <string name="facebook_app_id" translatable="false">426143394985560</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="continue_string" translatable="false">continue</string>
    <string name="continue_arabic" translatable="false">متابعة</string>
    <string name="sign_in" translatable="false">Log In</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password" translatable="false"><u>Forgot password?</u></string>
    <string name="forgot_password_title" translatable="false">Password Reset</string>
    <string name="log_in" translatable="false">Sign In</string>
    <string name="new_user" translatable="false">New To Steppi?</string>
    <string name="sign_up_here" translatable="false">Sign Up</string>
    <string name="or" translatable="false">or sign up  using</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="password_forgot_message">enter the registered phone number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">Name</string>
    <string name="personal_email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="i_agree_the_terms_condition"><u>T&amp;C</u></string>
    <string name="agree_to">Agree To</string>
    <string name="optional">Optional</string>
    <string name="nationality">Nationality</string>
    <string name="corporate_email">Organization Email</string>
    <string name="register">register</string>
    <string name="google_fit">Google fit</string>
    <string name="fit_bit">Fitbit</string>
    <string name="gramin">Garmin</string>
    <string name="samsung_health">samsung health</string>
    <string name="learn_more"><u>Don\’t See Your Device?</u></string>
    <string name="rules"><u>Rules</u></string>
    <string name="todo">TODO</string>
    <string name="send_code_again"><u>Resend code</u></string>
    <string name="continue_">continue</string>
    <string name="almost_there">Almost there!</string>
    <string name="label_otp_verify">Enter below the verification code we sent you.</string>
    <string name="label_otp_confirm">Enter below the confirmation code we sent you</string>
    <string name="winner_is">Winner is:</string>
    <string name="dumy">simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="participants">Participants</string>
    <string name="validation_enter_email">Please enter email id</string>
    <string name="validation_valid_email">Please enter a valid email id</string>
    <string name="validation_password">Please enter password</string>
    <string name="validation_minimum_password">Password should be of minimum %1$s characters</string>
    <string name="tracking_steps">How are you tracking your steps?</string>
    <string name="connection_success">Success!</string>
    <string name="connection_success_label">Now you are ready to</string>
    <string name="connection_success_step_save_smile">Step, Save and Smile…</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="home">Home</string>
    <string name="rewards">Rewards</string>
    <string name="challenges">Challenges</string>
    <string name="profile">Profile</string>
    <string name="comment">comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="members">Members</string>
    <string name="discussions">Discussions</string>
    <string name="discussion">Discussion</string>
    <string name="chat"> Chat </string>
    <string name="steppi_challenge">Steppi Challenges</string>
    <string name="my_challenge">My Challenges</string>
    <string name="reward">Reward:</string>
    <string name="distance">Distance</string>
    <string name="active_minutes">Active Minutes</string>
    <string name="calories">Calories</string>
    <string name="redeem">Redeem</string>
    <string name="select_location">Select Location</string>
    <string name="label_how_to_redeem">How to redeem</string>
    <string name="text_create">Create</string>
    <string name="join">Join</string>
    <string name="starts_in">Starts in:&#160;</string>
    <string name="ends_in">Ends In:&#160;</string>
    <string name="starts_on">Starts On:&#160;</string>
    <string name="ends_on">Ends On:&#160;</string>
    <string name="goal">Goal</string>
    <string name="goal_home">Goal</string>
    <string name="team_average">Team Average</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="total_steps">Total</string>
    <string name="lifetime_steps">Lifetime Steps</string>
    <string name="total_savings">Total Savings</string>
    <string name="corporate_label">Organization Login</string>
    <string name="you_connected_via">You connected via</string>
    <string name="vouchers_redeemed">Vouchers Redeemed</string>
    <string name="redeemed">Redeemed</string>
    <string name="notifications">Notifications</string>
    <string name="referral_code">Referral Code</string>
    <string name="copy">Copy</string>
    <string name="share_app">Share Steppi</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cost">Cost:</string>
    <string name="corporate_email_colon">Corporate Email:</string>
    <string name="not_verified_yet">not verified yet</string>
    <string name="resend_email"><u>Resend</u></string>
    <string name="submit_">Submit</string>
    <string name="used">Steps Redeemed</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="challenge_details">Challenge</string>
    <string name="challenge_code">challenge code</string>
    <string name="join_challenge">Join Challenge</string>
    <string name="find">Find</string>
    <string name="private_challenge">Private Challenge</string>
    <string name="instore">In-Store</string>
    <string name="online">Online</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="validation_mobile_number">Please enter your mobile number</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="validation_enter_phone">Please enter your phone number</string>
    <string name="change_device">Change Device</string>
    <string name="enter_valid_otp">Please enter a valid otp</string>
    <string name="other">Other</string>
    <string name="save_save_smile">Step Save Smile</string>
    <string name="mobile">Mobile</string>
    <string name="start">LET\'S GO</string>
    <string name="_1_900_step_to_reach_daily_goal">1,900 step to reach daily goal</string>
    <string name="on_boarding_text_one">See your daily steps, follow your progress and get motivated</string>
    <string name="on_boarding_text_two">Exchange steps and save big on dining, shopping and entertainment</string>
    <string name="on_boarding_text_three">Join a fun Steppi challenge or create your own</string>
    <string name="step">Step</string>
    <string name="country">Country</string>
    <string name="password_reset">Password Reset</string>
    <string name="go">Go</string>
    <string name="join_now">Join Now</string>
    <string name="corporate_challenge">corporate challenge</string>
    <string name="choose_device">Choose Device</string>
    <string name="next">Next</string>
    <string name="terms_condition">Terms And Conditions</string>
    <string name="validation_enter_name">Please enter your name</string>
    <string name="validation_enter_personal_email">Please enter your personal email</string>
    <string name="validation_enter_valid_email">Please enter valid email</string>
    <string name="validation_enter_corporate_valid_email">Please enter valid organization email</string>
    <string name="validation_enter_dob">Please enter your date of birth</string>
    <string name="validation_select_gender">Please select your gender</string>
    <string name="validation_select_tnc">Please check terms and conditions</string>
    <string name="validation_select_device">Please select a device</string>
    <string name="featured">Featured</string>
    <string name="you_connected">You Connected Via</string>
    <string name="food">Food</string>
    <string name="activities">activities</string>
    <string name="services">services</string>
    <string name="beauty">beauty</string>
    <string name="wellness">wellness</string>
    <string name="you_have_successfully_updated_your_profile">You have successfully updated your profile</string>
    <string name="edit_mobile">Change Mobile Number</string>
    <string name="mobile_confirmation">Mobile Number Verification</string>
    <string name="mobile_updated_message">You have successfully updated your Mobile</string>
    <string name="edit_password">Edit Password</string>
    <string name="confirmation">Confirm</string>
    <string name="password_updated_message">You have successfully updated your Password</string>
    <string name="digital">Digital</string>
    <string name="redeemed_in">Redeemed in:&#160;</string>
    <string name="redemption_code">Redemption code:&#160;</string>
    <string name="redeem_code">Redeem code:</string>
    <string name="ask_the_merchant_to_type_label">Please Ask The Merchant To Enter The Pin</string>
    <string name="ok">OK</string>
    <string name="leave_challenge_message">Are you sure?</string>
    <string name="leave_challenge">leave challenge</string>
    <string name="no_data">No data available</string>
    <string name="button_connect">Connect</string>
    <string name="you_are_not_connected_to_any_device">You Are Not Connected To Any Device</string>
    <string name="challenge_code_label">Challenge Code</string>
    <string name="challenge_code_desc">Already been invited to join a challenge?</string>
    <string name="private_challenge_or_text">Create a private challenge and invite your family and friends to join.</string>
    <string name="challenge_code_hint">Enter your code here</string>
    <string name="delete_challenge">Delete challenge</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_your_corporate_code_to_join">Enter Your Corporate Code To Join</string>
</resources>