<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical">

    <include layout="@layout/header_layout" />

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerContainer">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/device_connected" />

            <com.steppi.steppifitness.views.STGothamRoundedMediumTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:layout_marginBottom="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/connection_success"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium_x" />

            <com.steppi.steppifitness.views.STGothamRoundedBookTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/connection_success_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium_x" />

            <com.steppi.steppifitness.views.STGothamRoundedBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal_xx"
                android:gravity="center"
                android:text="@string/connection_success_step_save_smile"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium_x" />
        </LinearLayout>

        <com.steppi.steppifitness.views.STGothamRoundedBoldTextView
            android:id="@+id/next"
            style="@style/ButtonSolidTheme"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_extra_large_xxxx"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/theme_color" />
    </RelativeLayout>

</RelativeLayout>
