<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_medium"
    android:background="@drawable/edit_profile_bg"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_extra_large">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/device_not_connected_icon" />

        <com.steppi.steppifitness.views.STGothamRoundedBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_ultra_large"
            android:gravity="center"
            android:text="@string/leave_challenge"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:visibility="gone" />

        <com.steppi.steppifitness.views.STGothamRoundedBookTextView
            android:id="@+id/rewardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/you_are_not_connected_to_any_device"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <com.steppi.steppifitness.views.STGothamRoundedMediumTextView
        android:id="@+id/dialogConnectDevice"
        style="@style/ButtonSolidTheme"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:gravity="center"
        android:text="@string/button_connect"
        android:textAllCaps="true"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/text_size_medium_xxx" />

    <com.steppi.steppifitness.views.STGothamRoundedBookTextView
        android:id="@+id/dialogCancelDevice"
        style="@style/ButtonSolidTheme"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:background="@drawable/button_solid_green_stroke"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/button_bg_enabled_color"
        android:textSize="@dimen/text_size_medium_xxx" />
</LinearLayout>
