<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/edit_text_bg_color"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_discussion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:background="@color/transparent"
        android:padding="@dimen/margin_normal_xx" />

    <com.steppi.steppifitness.views.STGothamRoundedLightTextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data"
        android:textColor="@color/text_white"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <com.steppi.steppifitness.views.STGothamRoundedLightEditText
            android:id="@+id/comment_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounde_bg"
            android:gravity="center"
            android:hint="@string/add_comment"
            android:maxLines="5"
            android:minLines="5"
            android:padding="@dimen/margin_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal_xx"
            android:orientation="horizontal">

            <com.steppi.steppifitness.views.STGothamRoundedLightTextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_weight="1"
                android:background="@drawable/edit_profile_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/edit_text_bg_stroke_color"
                android:textSize="@dimen/text_size_medium_x" />

            <com.steppi.steppifitness.views.STGothamRoundedMediumTextView
                android:id="@+id/comment_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@drawable/button_bg_normal"
                android:gravity="center"
                android:text="@string/comment"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium_x" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>