<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_normal"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    android:paddingBottom="@dimen/margin_large"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:id="@+id/dialogView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/edit_profile_bg"
        android:orientation="vertical"
        android:padding="@dimen/margin_large">

        <com.steppi.steppifitness.views.STGothamRoundedMediumTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/enter_your_corporate_code_to_join"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium_x" />

        <com.steppi.steppifitness.views.STGothamRoundedLightEditText
            android:id="@+id/challengeCode"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:hint="@string/enter_code"
            android:imeOptions="actionDone"
            android:textColorHint="@color/button_bg_normal_color"
            android:textSize="@dimen/text_size_normal_xx" />
    </LinearLayout>

    <com.steppi.steppifitness.views.STPxBoldTextView
        android:id="@+id/dialogOK"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/button_bg_normal"
        android:gravity="center"
        android:paddingStart="@dimen/button_height_large"
        android:paddingEnd="@dimen/button_height_large"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_medium" />
</LinearLayout>
